WebCore: Display the correct summary in the web inspector for the shorthands border-color, border-width, border-style, margin, and padding. https://bugs.webkit.org/show_bug.cgi?id=7987

Reviewed by Timothy Hatcher.

Test: fast/css/shorthands-four-values.html

* css/CSSMutableStyleDeclaration.cpp:
(WebCore::CSSMutableStyleDeclaration::get4Values):
Display the summary information in the same way the shorthand would be
specified in a css rule.

LayoutTests:

* fast/css/shorthands-four-values-expected.txt: Added.
* fast/css/shorthands-four-values.html: Added.

Canonical link: https://commits.webkit.org/42263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50834 268f45cc-cd09-0410-ab3c-d52691b4dbfc